# ecom-fastapi-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.acme.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260307_0001_init.py  20260308_0002_product_image_url.py  20260308_0003_product_comments.py  20260311_0004_product_slug.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/core/: config.py  exceptions.py  media.py  security.py  slug.py
app/db/: session.py
app/models/: __init__.py  cart.py  category.py  enums.py  order.py  product.py  product_comment.py  user.py
app/repositories/: cart_repository.py  category_repository.py  order_repository.py  product_comment_repository.py  product_repository.py  user_repository.py
app/schemas/: auth.py  cart.py  category.py  order.py  product.py  product_comment.py  user.py
app/services/: auth_service.py  bootstrap_service.py  cache.py  cart_service.py  catalog_service.py  order_service.py  product_comment_service.py  user_service.py
app/tasks/: celery_app.py  worker_tasks.py
deploy/: nginx.acme.conf  nginx.conf  nginx.prod.conf
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: error.ts  (+2 more)
tests/: conftest.py  test_integration_api.py  test_unit_services.py
(+43 files in other folders)
